// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render empty button correctly 1`] = `
<Memo(Button)
  auto={false}
  className=""
  disabled={false}
  effect={true}
  ghost={false}
  loading={false}
  shadow={false}
  size="medium"
  type="default"
/>
`;

exports[`Button should render special styles 1`] = `ReactWrapper {}`;

exports[`Button should render special styles 2`] = `
<Memo(Button)
  auto={false}
  className=""
  disabled={false}
  effect={true}
  ghost={false}
  loading={true}
  shadow={false}
  size="medium"
  type="default"
>
  button
</Memo(Button)>
`;
